@@ -1,3 +1,7 @@
+2021-11-02 Danilo Chang
+
+	* Implement command: FaceDetectorYN
+
 2021-10-31 Danilo Chang
 
 	* Bump version to v0.12
